--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body id="top">
-
+		<p><a href="Page1.html">Page 1</a></p>
 			<!-- Banner -->
 			<!--
 				To use a video as your background, set data-video to the name of your video without
