--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Index</title>
+		<title>Page 1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body id="top">
-		<p><a href="Page1.html">Page 1</a></p>
+		<p><a href="/test.github.io/Page2.html">Page 2</a></p>
 			<!-- Banner -->
 			<!--
 				To use a video as your background, set data-video to the name of your video without
