--- a/Page2.html
+++ b/Page2.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Page 2</h1>
-    <p>
+    
         <?php
             echo "Hello";
         ?>
-    </p>
+    <p>After Hello</p>
 </body>
 </html>
